syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message AssetAccountControl {
    message PKey {
        
        string accnt = 10;
        string client_firm = 11; // SR client firm
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    string account_name = 100;
    string strategy_name = 103;
    OptStatus opt_status = 106;
    float util_pct_target = 109;
    float accnt_buying_power = 112;
    string modified_by = 115; // user who last modified this record
    SysEnvironment modified_in = 118;
    google.protobuf.Timestamp timestamp = 121; // timestamp of last modification
}


