syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    Records inserted into this table cancels all parent orders associated with userName/clientFirm
*/    
message SpdrUserCancel {
    message PKey {
        
        string cxl_user_name = 10; // Cancel all parent orders associated with cxlUserName and clientFirm
        string client_firm = 11;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    SysEnvironment sys_environment = 100; // original (source) sys environment [Stable, Current, etc]
    RunStatus run_status = 103; // original (source) run status [Prod,Beta]
    string cxl_reason = 106;
    string engine_name = 119; // set by the engine handling event (should be blank on arrival)
    string modified_by = 112; // user who last modified this record
    SysEnvironment modified_in = 115;
    google.protobuf.Timestamp timestamp = 118; // timestamp of last modification
}


